Switch to transaction ids
Signed-off-by: Antonio Lain <antlai@cafjs.com>

--- a/lib/confirm.html.mustache
+++ b/lib/confirm.html.mustache
@@ -1,4 +1,4 @@
-<h2> Caf.js </h2>
+<h2> Caf.js Labs LLC</h2>
 
 <h3> Confirm your email address </h3>
 
@@ -9,4 +9,4 @@
 <p> If you didn't request this email you can safely ignore it. </p>
 
 
-<p> The Caf.js Team </p>
+<p> The Caf.js Labs Team </p>
