--- a/lib/purchase.html.mustache
+++ b/lib/purchase.html.mustache
@@ -1,4 +1,4 @@
-<h2> Caf.js </h2>
+<h2> Caf.js Labs LLC</h2>
 
 <h3> Order Confirmation: {{id}} </h3>
 
@@ -9,4 +9,4 @@
 <h3> Your new balance is {{{balance}}} units.</h3>
 
 
-<p> The Caf.js Team </p>
+<p> The Caf.js Labs Team </p>
