--- a/lib/reset.html.mustache
+++ b/lib/reset.html.mustache
@@ -1,4 +1,4 @@
-<h2> Caf.js </h2>
+<h2> Caf.js Labs LLC</h2>
 
 <h3> Reset your account </h3>
 
@@ -15,4 +15,4 @@
 <p> If you didn't request this email you can safely ignore it. </p>
 
 
-<p> The Caf.js Team </p>
+<p> The Caf.js Labs Team </p>
